Fixed Contact Icon Container Size and Fixed Project Paragraph Spacing

--- a/src/App.scss
+++ b/src/App.scss
@@ -49,6 +49,7 @@ h4 {
 
 p {
   font-size: var(--font-size-p1-mobile);
+  line-height: 140%;
   font-family: var(--font-family-primary-light);
   padding: 0;
   margin: 0;
