--- a/src/components/Projects/Projects.scss
+++ b/src/components/Projects/Projects.scss
@@ -36,7 +36,7 @@
     h3 {
       /* Display & Box Model */
       width: 100%;
-      padding-left: 20px;
+      // padding-left: 20px;
 
       /* Other */
       text-align: left;
